fixing the link-jump issue

--- a/src/style/partials/_base.scss
+++ b/src/style/partials/_base.scss
@@ -72,3 +72,11 @@ table tr:nth-child(2n) {
 body > main > section.container, body > header.container, body > footer.container {
   padding: 4rem var(--container-margin);
 }
+
+[id]::before { /* https://stackoverflow.com/a/24298427 */
+  content: '';
+  display: block;
+  height:      var(--toolbar-height);
+  margin-top: -var(--toolbar-height);
+  visibility: hidden;
+}
